--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,4 +8,6 @@ body
         margin: 0px;
         display: grid;
         grid-template-rows: 120px 1fr 60px;
+        grid-template-columns: 1fr;
+        grid-template-areas: "cabecalho" "principal" "rodape" ;
     }
