--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,28 @@ body
         margin: 0px;
         display: grid;
         grid-template-rows: 120px 1fr 60px;
-        grid-template-columns: 1fr;
-        grid-template-areas: "cabecalho" "principal" "rodape" ;
+        grid-template-columns: 2fr;
+        grid-template-areas: 
+            "cabecalho"
+            "principal"
+            "principal" ;
+    }
+
+.cabecalho
+    {
+        grid-area: cabecalho;
+        background-color: rgb(21, 21, 158);
+    }
+.principal
+    {
+        grid-area: principal;
+        height: calc(100vh - 180px);
+        background-color: #0f0f0f0f;
+        padding: 20px;
+    }
+
+.rodape
+    {
+        grid-area: rodape;
+        background-color: white;
     }
