--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body
         height: 100vh;
         margin: 0px;
         display: grid;
-        grid-template-rows: 120px 1fr 60px;
+        grid-template-rows: 420px 1fr 60px;
         grid-template-columns: 2fr;
         grid-template-areas: 
             "cabecalho"
@@ -18,7 +18,13 @@ body
 .cabecalho
     {
         grid-area: cabecalho;
+        width: 100%;
         background-color: rgb(21, 21, 158);
+        color: white;
+        display: flex;
+        flex-direction: column;
+        justify-self: center;
+        align-items: center;
     }
 .principal
     {
