--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body
         height: 100vh;
         margin: 0px;
         display: grid;
-        grid-template-rows: 420px 1fr 60px;
+        grid-template-rows: 200px 1fr 60px;
         grid-template-columns: 2fr;
         grid-template-areas: 
             "cabecalho"
@@ -19,12 +19,15 @@ body
     {
         grid-area: cabecalho;
         width: 100%;
-        background-color: rgb(21, 21, 158);
+        background-color: rgb(31, 31, 201);
         color: white;
         display: flex;
         flex-direction: column;
         justify-self: center;
         align-items: center;
+        box-shadow: 1px 7px 5px 0px rgba(0,0,0,0.75);
+        -webkit-box-shadow: 1px 7px 5px 0px rgba(0,0,0,0.75);
+        -moz-box-shadow: 1px 7px 5px 0px rgba(0,0,0,0.75);
     }
 .principal
     {
