--- a/assets/css/exercicio.css
+++ b/assets/css/exercicio.css
@@ -25,3 +25,15 @@ body.exercicio
         padding: 5ṕx 10px;
         margin-right: 10px;
     }
+.conteudo
+    {
+        font-size: 2rem;
+    }
+.conteudo > .titulo
+    {
+        font-size: 2.5rem;
+        font-weight: 300;
+        padding-bottom: 10px;
+        border-bottom: 1px solid #999;
+        margin-bottom: 20px;
+    }
