--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,3 +179,38 @@ span.usuario {
     font-size: 1.2rem;
     font-weight: 300;
 }
+
+.popup-overlay {
+    visibility:hidden;
+    }
+    
+    .popup-content {
+    visibility:hidden;
+    }
+
+    .popup-overlay {
+        /*Hides pop-up when there is no "active" class*/
+        visibility: hidden;
+        position: absolute;
+        background: #ffffff;
+        border: 3px solid #666666;
+        width: 50%;
+        height: 50%;
+        left: 25%;
+      }
+      
+      .popup-overlay.active {
+        /*displays pop-up when "active" class is present*/
+        visibility: visible;
+        text-align: center;
+      }
+      
+      .popup-content {
+        /*Hides pop-up content when there is no "active" class */
+        visibility: hidden;
+      }
+      
+      .popup-content.active {
+        /*Shows pop-up content when "active" class is present */
+        visibility: visible;
+      }
